--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Thailand</h1>
+	<br/>
+	<p>Want to experience thai massage</p>
+	<ol>
+		<li><strong>Bangtok</strong></li>
+		<li><i>Chiang Mai</i></li>
+		<li><bold>huket</bold></li>
+		<li><strong>krabi</strong></li>
+		<li><i>Koh Samui</i></li>
+	</ol>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
