--- a/main.html
+++ b/main.html
@@ -18,6 +18,13 @@
 		<li><strong>krabi</strong></li>
 		<li><i>Koh Samui</i></li>
 	</ol>
+	<ul>
+			<li><strong>noodels</strong></li>
+		<li><i>pad Thai</i></li>
+		<li><bold>Hot and Sour Soup</bold></li>
+		<li><strong>Tom Yum Goong</strong></li>
+		<li><i>Massaman</i></li>
+	</ul>
 	
     <script type="text/javascript" src="./script.js">
 </script>
